--- a/templates/dashlayout.html
+++ b/templates/dashlayout.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html  class="has-navbar-fixed-top">
+<html class="has-navbar-fixed-top">
 
 <head>
   <meta charset="utf-8">
@@ -10,10 +10,10 @@
   <title>PrintShip</title>
   {% endif %}
 
-  <link rel = "icon" href ="{{url_for('static',filename ='brand.png')}}" type = "image/x-icon">
+  <link rel="icon" href="{{url_for('static',filename ='brand.png')}}" type="image/x-icon">
   <link rel="stylesheet" href="{{url_for('static',filename ='css/cyborg.css')}}" id="theme-link">
   <link rel="stylesheet" href="{{url_for('static',filename ='style.css')}}">
-  
+
 </head>
 
 <body id="bdy">
@@ -40,7 +40,7 @@
         <a class="navbar-item" href="{{url_for('new_post')}}">
           +New
         </a>
-        <a class="navbar-item"href="{{url_for('about')}}">
+        <a class="navbar-item" href="{{url_for('about')}}">
           About
         </a>
 
@@ -75,7 +75,7 @@
               Logout
             </a>
           </div>
-            
+
           {% else %}
           <div class="buttons">
             <a class="button is-primary" href="{{url_for('register')}}">
@@ -85,9 +85,9 @@
               Login
             </a>
           </div>
-            
+
           {% endif %}
-         
+
         </div>
       </div>
     </div>
@@ -108,74 +108,104 @@
     <div class="column is-one-fifth ">
       <article class="panel is-primary " style="position: sticky; margin: 15px 15px 5px 5px; ">
         <p class="panel-heading">
-          Explore
+          Tables
         </p>
         <div class="panel-block">
-          <form action="{{url_for('home')}}" target="{{url_for('home')}}" method="GET">
-          <div class="field has-addons">
-            <div class="control">
-              <input class="input" type="Search" placeholder="Find a repository" name="q">
-            </div>
-            <div class="control">
-              <button class="button is-info" type="submit"><i class="fas fa-search"></i></button>
-            </div>
+          
+        </div>
+        <a class="panel-block " href="{{url_for('/')}}">
+          <span class="panel-icon">
+            <i class="fas fa-hashtag" aria-hidden="true"></i>
+          </span>
+          Orders
+        </a>
+        <a class="panel-block " href="{{url_for('/')}}">
+          <span class="panel-icon">
+            <i class="fas fa-hashtag" aria-hidden="true"></i>
+          </span>
+          Product
+        </a>
+        <a class="panel-block" href="{{url_for('/')}}">
+          <span class="panel-icon">
+            <i class="fas fa-hashtag" aria-hidden="true"></i>
+          </span>
+          Users
+        </a>
+        <a class="panel-block" href="{{url_for('/')}}">
+          <span class="panel-icon">
+            <i class="fas fa-hashtag"></i>
+          </span>
+          Cashout requests
+        </a>
+        <a class="panel-block">
+          <div id="darkmode">
+            <button class="button is-rounded is-fullwidth" id="darkmodebtn" onclick="checkmode()">Dark Mode</button>
           </div>
-        </form>
-        </div>
-        <a class="panel-block " href="{{url_for('toprate')}}">
-          <span class="panel-icon">
-            <i class="fas fa-hashtag" aria-hidden="true"></i>
-          </span>
-          Top rated
         </a>
-        <a class="panel-block " href="{{url_for('home')}}">
-          <span class="panel-icon">
-            <i class="fas fa-hashtag" aria-hidden="true"></i>
-          </span>
-          Most Recent
-        </a>
-        <a class="panel-block" href="{{url_for('categorie',category='Music')}}">
-          <span class="panel-icon">
-            <i class="fas fa-hashtag" aria-hidden="true"></i>
-          </span>
-          Music
-        </a>
-      <a class="panel-block" href="{{url_for('categorie',category='Movies')}}">
-        <span class="panel-icon">
-          <i class="fas fa-hashtag" ></i>
-        </span>
-        Movies
-      </a>
-      <a class="panel-block" href="{{url_for('categorie',category='-series')}}">
-        <span class="panel-icon">
-          <i class="fas fa-hashtag" ></i>
-        </span>
-        TV-series
-      </a>
-      <a class="panel-block" href="{{url_for('categorie',category='Anime')}}">
-        <span class="panel-icon">
-          <i class="fas fa-hashtag" ></i>
-        </span>
-        Anime
-      </a>
-
-
-      <a class="panel-block">
-        <div id="darkmode">
-          <button class="button is-rounded is-fullwidth" id="darkmodebtn" onclick="checkmode()">Dark Mode</button>
-        </div>
-      </a>
-    </article>
+      </article>
     </div>
     <div class="container mx-0 columns is-multiline is-three-quarters">
+      <div class="card column is-one-quarter mr-6 mt-2 p-0" style="background-color : #118C4F;">
+        <div class="card-content">
+          <div class="media-content">
+            <p class="title" style="color : #ffff;"><b>Total Sale</b></p>
+            <p class="m-2 title" style="color : #ffff; text-align:center;">214 <b>K</b></p>
+          </div>
+        </div>
+      </div>
+      <div class="card column is-one-quarter mr-6 mt-2 p-0" style="background-color : rgb(96, 3, 114);">
+        <div class="card-content">
+          <div class="media-content">
+            <p class="title" style="color : #ffff;"><b>Total products</b></p>
+            <p class="m-2 title" style="color : #ffff; text-align:center;">214 <b>K</b></p>
+          </div>
+        </div>
+
+      </div>
+      <div class="card column is-one-quarter mr-6 mt-2 p-0" style="background-color : rgb(255, 146, 44);">
+        <div class="card-content">
+          <div class="media-content">
+            <p class="title" style="color : #ffff;"><b>Total orders</b></p>
+            <p class="m-2 title" style="color : #ffff; text-align:center;">214 <b>K</b></p>
+          </div>
+        </div>
+
+      </div>
+      <div class="card column is-one-quarter mr-6 mt-2 p-0" style="background-color : rgb(48, 44, 255);">
+        <div class="card-content">
+          <div class="media-content">
+            <p class="title" style="color : #ffff;"><b>Total fullfiled</b></p>
+            <p class="m-2 title" style="color : #ffff; text-align:center;">214 <b>K</b></p>
+          </div>
+        </div>
+
+      </div>
+      <div class="card column is-one-quarter mr-6 mt-2 p-0" style="background-color : rgb(255, 44, 44);">
+        <div class="card-content">
+          <div class="media-content">
+            <p class="title" style="color : #ffff;"><b>M cashout</b></p>
+            <p class="m-2 title" style="color : #ffff; text-align:center;">214 <b>K</b></p>
+          </div>
+        </div>
+
+      </div>
+      <div class="card column is-one-quarter mr-6 mt-2 p-0" style="background-color : rgb(51, 255, 44);">
+        <div class="card-content">
+          <div class="media-content">
+            <p class="title" style="color : #ffff;"><b>M revenue</b></p>
+            <p class="m-2 title" style="color : #ffff; text-align:center;"> 4 <b>K</b></p>
+          </div>
+        </div>
+
+      </div>
       {% block content %}
 
       {% endblock content %}
-
     </div>
   </section>
 
 </body>
 <script src="{{url_for('static',filename ='main.js')}}"></script>
 <script defer src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"></script>
+
 </html>
